# feedback-decision-transformer

./: LICENSE  README.md  pyproject.toml
Roms/HC ROMS/BY ALPHABET/: ======== ROM HUNTER'S HARMONY CART ORIGINAL 1977-1992 VCS ROMS COLLECTION V11 ========.txt
Roms/HC ROMS/BY ALPHABET (PAL)/: ======== ROM HUNTER'S HARMONY CART PAL 1977-1992 VCS ROMS COLLECTION V4 ========.txt
Roms/ROMS/: ========  ROM HUNTER'S 1977-1992 VCS ROMS COLLECTION V16  ========.txt
src/fdt/: augment_dataset_with_oracle_feedback_dopamine.py  create_dataset.py  dataset.py  env.py  feedback_reward_shaping_validator.py  feedback_validator.py  game_evaluation.py  generate_important_states.py  lr_decay.py  model.py  run.py  utils.py
